--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -56,6 +56,24 @@ main {
   padding: 20px;
 }
 
+.footer {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  background-color: rgb(35, 200, 200);
+  align-items: center;
+  padding: 20px;
+}
+.footer span {
+  font-size: 12px;
+  color: var(--color-back-pearl-800);
+}
+
+.footer_logo {
+  width: 100px;
+  mix-blend-mode: multiply;
+}
+
 .input {
   padding: 12px;
   height: 48px;
@@ -94,6 +112,60 @@ main {
   border-radius: 5px;
   font-size: 16px;
   text-decoration: none;
+}
+
+.home .posts_container {
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  gap: 100px;
+}
+.home .post {
+  display: flex;
+  gap: 32px;
+  margin-bottom: 46px;
+}
+.home .post:nth-child(2n+1) {
+  flex-direction: row-reverse;
+}
+.home .post_img {
+  flex: 2;
+  position: relative;
+}
+.home .post_img::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: var(--color-back-pearl-700);
+  position: absolute;
+  top: 5px;
+  left: -5px;
+  z-index: -1;
+}
+.home .post_img img {
+  width: 100%;
+  max-height: 400px;
+  object-fit: cover;
+}
+.home .post_content {
+  flex: 3;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.home .post_content h1 {
+  font-size: 48px;
+}
+.home .post_content p {
+  font-size: 18px;
+}
+.home .post_content button {
+  width: 100px;
+}
+
+.link {
+  text-decoration: none;
+  color: black;
 }
 
 .auth {
