--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -63,6 +63,7 @@ main {
   background-color: rgb(35, 200, 200);
   align-items: center;
   padding: 20px;
+  margin-top: 50px;
 }
 .footer span {
   font-size: 12px;
@@ -72,6 +73,57 @@ main {
 .footer_logo {
   width: 100px;
   mix-blend-mode: multiply;
+}
+
+.single {
+  display: flex;
+  gap: 30px;
+}
+.single h1 {
+  font-size: 30px;
+}
+.single p {
+  text-align: justify;
+  line-height: 30px;
+}
+.single .content {
+  flex: 5;
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+.single .content > img {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+.single .content .user {
+  display: flex;
+  align-self: center;
+  gap: 20px;
+  font-size: 14px;
+}
+.single .content .user .content_avatar {
+  width: 50px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+.single .content .user .span {
+  font-weight: bold;
+}
+.single .menu {
+  flex: 2;
+}
+
+.edit {
+  display: flex;
+  gap: 5px;
+}
+.edit .interaction {
+  width: 15px;
+  height: 15px;
+  cursor: pointer;
+  object-fit: cover;
 }
 
 .input {
@@ -168,6 +220,34 @@ main {
   color: black;
 }
 
+.menu {
+  flex: 2;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+}
+.menu h1 {
+  font-size: 20px;
+  color: #555;
+}
+.menu .post {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.menu .post img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+.menu .post h2 {
+  font-size: 16px;
+  color: #555;
+}
+.menu .post button {
+  width: 100px;
+}
+
 .auth {
   height: 100vh;
   display: flex;
@@ -203,6 +283,7 @@ main {
 .header {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 52px;
 }
 
 .header_logo {
