--- a/client/src/styles/elements.scss
+++ b/client/src/styles/elements.scss
@@ -35,6 +35,7 @@ main{
     background-color: rgb(35, 200, 200);
     align-items: center;
     padding: 20px;
+    margin-top: 50px;
 
     span{
         font-size: 12px;
@@ -45,4 +46,63 @@ main{
 .footer_logo{
     width: 100px;
     mix-blend-mode: multiply;
+}
+
+.single{
+    display: flex;
+    gap: 30px;
+
+    h1{
+        font-size: 30px;   
+    }
+
+    p{
+        text-align: justify;    
+        line-height: 30px;
+    }
+
+    .content{
+        flex: 5;
+        display: flex;
+        flex-direction: column;
+        gap: 32px;
+
+        > img{
+            width: 100%;
+            height: 300px;
+            object-fit: cover;
+        }
+
+        .user{
+            display: flex;
+            align-self: center;
+            gap: 20px;
+            font-size: 14px;
+
+            .content_avatar{
+                width: 50px;
+                border-radius: 50%;
+                object-fit: cover;
+            }
+
+            .span{
+                font-weight: bold;
+            }
+        }
+    }
+    .menu{
+        flex: 2;
+    }
+}
+
+.edit{
+    display: flex;
+    gap: 5px;
+
+    .interaction{
+        width: 15px;
+        height: 15px;
+        cursor: pointer;
+        object-fit: cover;
+    }
 }
