Se realizo el arreglo de bugs referente al manejo de la sesion y se termino el modulo de eliminacion

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -210,6 +210,8 @@ main {
 }
 .home .post_content p {
   font-size: 18px;
+  height: 100px;
+  overflow-y: hidden;
 }
 .home .post_content button {
   width: 100px;
