--- a/client/src/styles/components/card.scss
+++ b/client/src/styles/components/card.scss
@@ -50,6 +50,9 @@
 
         p{
             font-size: 18px;
+            height: 100px;
+            overflow-y: hidden;
+            
         }
 
         button{
