--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -317,4 +317,76 @@ main {
   cursor: pointer;
 }
 
+.add {
+  margin-top: 20px;
+  display: flex;
+  gap: 20px;
+}
+.add .content {
+  flex: 5;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.add .content input {
+  padding: 10px;
+  border: 1px solid lightgray;
+}
+.add .content .editorContainer {
+  height: 300px;
+  overflow: scroll;
+  border: 1px solid lightgray;
+}
+.add .content .editorContainer .editor {
+  height: 100%;
+  border: none;
+}
+.add .menu {
+  flex: 2;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.add .menu .item {
+  border: 1px solid lightgray;
+  padding: 10px;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  font-size: 12px;
+  color: #555;
+}
+.add .menu .item h1 {
+  font-size: 20px;
+}
+.add .menu .item .file {
+  text-decoration: underline;
+  cursor: pointer;
+}
+.add .menu .item .buttons {
+  display: flex;
+  justify-content: space-between;
+}
+.add .menu .item .buttons :first-child {
+  cursor: pointer;
+  color: teal;
+  background-color: white;
+  border: 1px solid teal;
+  padding: 3px 5px;
+}
+.add .menu .item .buttons :last-child {
+  cursor: pointer;
+  color: white;
+  background-color: teal;
+  border: 1px solid teal;
+  padding: 3px 5px;
+}
+.add .menu .item .cat {
+  display: flex;
+  align-items: center;
+  gap: 2px;
+  color: teal;
+}
+
 /*# sourceMappingURL=styles.css.map */
